<resources>
    <string name="app_name">MovieCatalogueLastProject</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="exit">Exit</string>
    <string name="name_email">e-mail : spgracella84@gmail.com</string>
    <string name="name_iwan_tristanto">Name : Iwan Tristanto</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="txt_movie_name">Movie Name :</string>
    <string name="txt_movie_release">Release     :</string>
    <string name="txt_movie_description">Overview:</string>
    <string name="txt_tv_show_name">Tv Show Name :</string>
    <string name="txt_tv_show_release">Release     :</string>
    <string name="txt_tv_show_description">Overview:</string>
    <string name="image_movie">Image Movie</string>
    <string name="tv_movie_name">Name Movie</string>
    <string name="tv_movie_release">Release</string>
    <string name="tv_movie_description">Description</string>
    <string name="image_tv_show">Image Tv Show</string>
    <string name="tv_tv_show_name">Name Tv Show</string>
    <string name="tv_tv_show_release">Release</string>
    <string name="tv_tv_show_description">Description</string>
    <string name="tv_show_image">Tv Show Image</string>
    <string name="change_language_setting">Change Language</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="image_splash">Image Splash</string>
    <string name="about_us">About Us</string>
    <string name="favorite">Favorite</string>
    <string name="last_project">Last Project</string>
    <string name="delete">Delete</string>
    <string name="tab_text_1">Favorite Movie</string>
    <string name="tab_text_2">Favorite TV Show</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="item_save">Item saved to favorite</string>
    <string name="item_delete">Item favorite deleted</string>
    <string name="empty_movie_favorite">Movie Favorite is Empty</string>
    <string name="empty_tvshow_favorite">TV show Favorite is Empty</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="detail_movie">Movie Detail</string>
    <string name="tvshow_detail">TvShow Detail</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv">Search Tv Show</string>
    <string name="not_found">Nothing found, try another query!</string>
    <string name="no_result">No Result, try another movie</string>
    <string name="no_result_tv">No Result, try another Tv Show</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="daily_reminder">Set Daily Reminder</string>
    <string name="realease_today">Set Realease Today</string>
    <string name="message_daily_reminder">Hi, there is a movie surprise today!</string>
    <string name="message_release_reminder">Hi, there is a new movie today!</string>
    <string name="setting">Setting Notification</string>
    <string name="set_daily_reminder">Daily Reminders are Activated</string>
    <string name="set_release_reminder">Release Reminders are Activated</string>
    <string name="cancel_daily_reminder">Daily Reminder is Disabled</string>
    <string name="cancel_release_reminder">Release Reminder is Disabled</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="empty_text">NO DATA</string>

</resources>
